@@ -3,6 +3,9 @@ pitrery 1.8
 
   * Exclude temporary locations from backup
 
+  * Depend on pax to create hardlinks instead of GNU cp, for better
+    portability.
+
 
 pitrery 1.7
 ===========
